[tool.poetry]
name = "kirov"
version = "0.1.0"
description = ""
authors = ["RomanL91 <dev_roman91@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
requests = "^2.28.2"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
